// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/grid/demo/basic.md correctly 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-24"
  >
    col
  </div>
</div>
`;

exports[`renders ./components/grid/demo/flex.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    sub-element align left
  </span>
</div>
`;

exports[`renders ./components/grid/demo/flex-align.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Align Top
  </span>
</div>
`;

exports[`renders ./components/grid/demo/flex-order.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Normal
  </span>
</div>
`;

exports[`renders ./components/grid/demo/flex-stretch.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Percentage columns
  </span>
</div>
`;

exports[`renders ./components/grid/demo/gutter.md correctly 1`] = `
<div
  class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  role="separator"
>
  <span
    class="ant-divider-inner-text"
  >
    Horizontal
  </span>
</div>
`;

exports[`renders ./components/grid/demo/offset.md correctly 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-8"
  >
    col-8
  </div>
  <div
    class="ant-col ant-col-8 ant-col-offset-8"
  >
    col-8
  </div>
</div>
`;

exports[`renders ./components/grid/demo/playground.md correctly 1`] = `
<span>
  Horizontal Gutter (px): 
</span>
`;

exports[`renders ./components/grid/demo/responsive.md correctly 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-xs-2 ant-col-sm-4 ant-col-md-6 ant-col-lg-8 ant-col-xl-10"
  >
    Col
  </div>
  <div
    class="ant-col ant-col-xs-20 ant-col-sm-16 ant-col-md-12 ant-col-lg-8 ant-col-xl-4"
  >
    Col
  </div>
  <div
    class="ant-col ant-col-xs-2 ant-col-sm-4 ant-col-md-6 ant-col-lg-8 ant-col-xl-10"
  >
    Col
  </div>
</div>
`;

exports[`renders ./components/grid/demo/responsive-more.md correctly 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-xs-5 ant-col-xs-offset-1 ant-col-lg-6 ant-col-lg-offset-2"
  >
    Col
  </div>
  <div
    class="ant-col ant-col-xs-11 ant-col-xs-offset-1 ant-col-lg-6 ant-col-lg-offset-2"
  >
    Col
  </div>
  <div
    class="ant-col ant-col-xs-5 ant-col-xs-offset-1 ant-col-lg-6 ant-col-lg-offset-2"
  >
    Col
  </div>
</div>
`;

exports[`renders ./components/grid/demo/sort.md correctly 1`] = `
<div
  class="ant-row"
>
  <div
    class="ant-col ant-col-18 ant-col-push-6"
  >
    col-18 col-push-6
  </div>
  <div
    class="ant-col ant-col-6 ant-col-pull-18"
  >
    col-6 col-pull-18
  </div>
</div>
`;

exports[`renders ./components/grid/demo/useBreakpoint.md correctly 1`] = `Current break point:`;
